# aias-core

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
android/: Cargo.toml
android/src/: lib.rs
core/: Cargo.toml
core/src/: crypto.rs  judge.rs  lib.rs  sender.rs  signer.rs  tests.rs  utils.rs  verifyer.rs
ffi/: Cargo.toml
ffi/src/: lib.h  lib.rs
go/: Cargo.toml  aias_go.h
go/src/: lib.rs
ios/: Cargo.toml
ios/src/: lib.h  lib.rs  tests.rs
src/: client.rs  crypto.rs  lib.rs  sender.rs  server.rs  signer.rs  tests.rs  utils.rs  verifyer.rs
