[package]
name = "aias-core"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fair-blind-signature = { git = "https://github.com/project-aias/fair-blind-signature" }

