[package]
name = "aias-core"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
fair-blind-signature = { git = "https://github.com/project-aias/fair-blind-signature", rev = "c63e07b" }
rsa = "0.3.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.3"
pem = "0.8.1"
jni = "0.14.0"
