[package]
name = "ios"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fair-blind-signature = { git = "https://github.com/project-aias/fair-blind-signature", rev = "2565e6d" }
aias-core = { path = "../core" }
rsa = "0.3.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "lib"
crate-type = ["staticlib", "cdylib"]
